--- a/trunk/of/app/views/projects/_form.rhtml
+++ b/trunk/of/app/views/projects/_form.rhtml
@@ -1,46 +1,65 @@
+<%# https://sourceforge.net/register-project %>
+<%# http://code.google.com/hosting/createProject %>
+
 <%= error_messages_for 'project' %>
 
 <!--[form:project]-->
-<p><label for="project_name"><%= _("Project|name") %></label><br/>
-<%= text_field 'project', 'name'  %></p>
+<%
+  def foo(col, req, help)
+    return <<"AAA"
+    <label for="project_#{col}">
+      #{_("Project|#{col.capitalize}")}
+    </label>
+    #{ '<em class="required">*</em>' if req }
+    #{ help_icon(help) if help }
+AAA
+  end
 
-<p><label for="project_summary"><%= _("Project|summary") %></label><br/>
-<%= text_area 'project', 'summary'  %></p>
+  def rows(*data)
+    rtn = ""
+    while ( ! data.empty? )
+      h = data.shift
+      d = data.shift
+      rtn += %Q!<tr><th>#{h}</th><td>#{d}</td></tr>!
+    end
+    rtn
+  end
 
-<p><label for="project_rationale">Rationale</label><br/>
-<%= text_area 'project', 'rationale'  %></p>
+%>
 
-<p><label for="project_description">description</label><br/>
-<%= text_area 'project', 'description'  %></p>
+<table class="form_table">
+<%=  rows(
+  foo("name", true, _("Project|Name|Help")),
+    text_field('project', 'name'),
+  foo("summary", true, _("Project|Summary|Help")),
+    text_area('project', 'summary'),
+  # rationale
+  foo("description", true, _("Project|Description|Help")),
+    text_area('project', 'description'),
+  foo("contactinfo", true, _("Project|Contactinfo|Help")),
+    text_field('project', 'contactinfo'),
+  foo("maturity", true, _("Project|Maturity|Help")),
+    select('project', 'maturity', Project::PLATFORMS),
+  foo("license", true, _("Project|License|Help")),
+    select('project', 'license', Project::LICENSES),
+  foo("contentlicense", true, _("Project|Contentlicense|Help")),
+    select('project', 'contentlicense', Project::CONTENT_LICENSES),
+  foo("platform", true, _("Project|Platform|Help")),
+    of_check_box_group("project[platform]", Project::PLATFORMS, @project.platform),
+  foo("programminglanguage", true, _("Project|Programminglanguage|Help")), 
+    of_check_box_group("project[programminglanguage]", Project::PROGRAMMING_LANGUAGES, @project.programminglanguage),
+  foo("intendedaudience", true, _("Project|Intendedaudience|Help")), 
+    of_check_box_group("project[intendedaudience]", Project::INTENDED_AUDIENCE, @project.intendedaudience),
+  foo("redirecturl", true, _("Project|Redirecturl|Help")), 
+    text_field('project', 'redirecturl'),
+  foo("vcs", true, _("Project|Vcs|Help")), 
+    select('project', 'vcs', Project::VCS),
+  foo("remotevcs", true, _("Project|Remotevcs|Help")), 
+    text_field('project', 'remotevcs')
 
-<p><label for="project_contactinfo">Contactinfo</label><br/>
-<%= text_field 'project', 'contactinfo'  %></p>
+)
+%>
+</table>
 
-<p><label for="project_maturity">Maturity</label><br/>
-<%= text_field 'project', 'maturity'  %></p>
-
-<p><label for="project_license">License</label><br/>
-<%= select 'project', 'license', Project::LICENSES %></p>
-
-<p><label for="project_contentlicense">Contentlicense</label><br/>
-<%= select 'project', 'contentlicense', Project::CONTENT_LICENSES %></p>
-
-<p><label for="project_platform">Platform</label><br/>
-<%= of_check_box_group("project[platform]", Project::PLATFORMS, @project.platform) %>
-
-<p><label for="project_programminglanguage">Programminglanguage</label><br/>
-<%= of_check_box_group("project[programminglanguage]", Project::PROGRAMMING_LANGUAGES, @project.programminglanguage) %>
-
-<p><label for="project_intendedaudience">Intendedaudience</label><br/>
-<%= of_check_box_group("project[intendedaudience]", Project::INTENDED_AUDIENCE, @project.intendedaudience) %>
-
-<p><label for="project_redirecturl">Redirecturl</label><br/>
-<%= text_field 'project', 'redirecturl'  %></p>
-
-<p><label for="project_vcs">Vcs</label><br/>
-<%= select 'project', 'vcs', Project::VCS %></p>
-
-<p><label for="project_remotevcs">Remotevcs</label><br/>
-<%= text_field 'project', 'remotevcs'  %></p>
 <!--[eoform:project]-->
 
