--- a/trunk/of/app/views/news/_form.rhtml
+++ b/trunk/of/app/views/news/_form.rhtml
@@ -1,7 +1,7 @@
 <%= error_messages_for 'news' %>
 
 <!--[form:news]-->
-<p><label for="news_subject">標題</label><br/>
+<p><label for="news_subject">_('Subject')</label><br/>
 <%= text_field 'news', 'subject' %></p>
 
 <% if permit?("site_admin") -%>
@@ -10,14 +10,16 @@
     <%= fckeditor_textarea( "news", "description", :height => 400 ) %> 
 </div>
 <% else %>
-<p><label for="news_descr">內容</label><br/>
+<p><label for="news_descr">_('Description')</label><br/>
 <%= text_area("news", "description", "cols" => 40, "rows" => 10) %></p>
 <% end %>
 
-<p><label for="news_tags">標籤</label><br/>
+<% if permit?("site_admin") -%>
+<p><label for="news_tags">_('Tags')</label><br/>
 <%= text_field 'news', 'tags' %></p>
+<% end %>
 
-<p><label for="news_status_1">狀態</label><br/>
+<p><label for="news_status_1">_('Status')</label><br/>
 <%= radio_button("news", "status", "1") %>開啟
 <%= radio_button("news", "status", "0") %>關閉
 </p>
