--- a/trunk/of/app/views/openfoundry/search.rhtml
+++ b/trunk/of/app/views/openfoundry/search.rhtml
@@ -1,18 +1,17 @@
-<div id="Home">
-	<h1>Openfoundry#Search Result</h1>
-	<h1>Search Hits: <%= @result[0].total_hits + @result[1].total_hits %></h1>
-
-
-
-        <%
-          project_pages = Object.new
-          def project_pages.current
-            foo = Object.new
-            def foo.previous; false; end
-            def foo.next; false; end
-            foo
-          end
-        %>
-
-<%= render(:partial => 'projects/list', :layout => false, :locals => { :project_pages => project_pages, :projects => @result[1] }) %>
+<div id="search_result">
+  <h1><%= _('Search Result') %></h1>
+  <% form_tag '/openfoundry/search', :method => :get do -%>
+    <%= text_field_tag 'query',@query, :size => 45 %>
+    <%= submit_tag _('search'), :class => 'button' %>
+  <% end -%>
+  <h1><%= _('Search Hits') %>: <%= @results.total_hits %></h1>
+  
+  <%#= render(:partial => 'projects/list', :layout => false, :locals => { :project_pages => project_pages, :projects => @result[1] }) %>
+  <table class='form-table'>
+    <% @results.each do |record| %>
+      <tr>
+        <%= render(:partial => "#{@lookup[record.class.class_name]}/search_hit", :layout => false, :locals => {:record => record}) %>
+      </tr>
+    <% end %>
+  </table>
 </div>
