--- a/trunk/of/app/views/openfoundry/_staticities.rhtml
+++ b/trunk/of/app/views/openfoundry/_staticities.rhtml
@@ -1,6 +1,5 @@
 <h3><img src="/images/of/icon01.gif" align="left" /><%=_('Statistics')%></h3>
 <ul>
-  <li>專案: 824項</li>
-  <li>使用者: 5220人</li>
+  <li>專案: <%= projectCount %>項</li>
+  <li>使用者: <%= userCount %></li>
 </ul>
-
