--- a/of/app/views/releases/_top_download_list.rhtml
+++ b/of/app/views/releases/_top_download_list.rhtml
@@ -6,7 +6,8 @@
     <th></th>
     <th><%= _('Rank') %></th>
     <th><%= _('Release UNIX Name') %></th>
-    <th><%= _('Date') %></th>
+    <th><%= _('Release Date') %></th>
+    <th><%= _('Download') %></th>
   </tr>
   
 <% i=(@page-1)*10 %>
@@ -15,7 +16,8 @@
     <td><img src="<%= url_for(:controller => :images,:action => "image", :id => release.icon,:size => 16) %>"/></td>
     <td><%= (i+=1).to_s %></td>
     <td><%= link_to "#{release.name}", "/projects/#{release.project_id}/releases/#{release.id}" %></td>
-    <td><%= "#{release.created_at}"  %></td>
+    <td><%= "#{release.created_at.strftime("%Y/%m/%d %H:%M")}"  %></td>
+    <td><%= "#{release.release_counter}"  %></td>
   </tr>
 <% end %>
 </table>
