--- a/trunk/of/app/views/openfoundry/index.rhtml
+++ b/trunk/of/app/views/openfoundry/index.rhtml
@@ -54,12 +54,7 @@
   <div id="HomeRight">
     <h3><img src="/images/of/icon05.gif" align="left" /><%=_('Project News')%><%#=link_to_remote( "<img src='http://publib.boulder.ibm.com/infocenter/tivihelp/v10r1/topic/com.ibm.ccmdb.doc/cmdb_user/images/icon_reload.gif' style='border:none;' border='0'></img>", :update => "home_news", :url => { :controller => 'news', :action => '_home_news' } ) %></h3>
     <%= render :partial => "news/listn", :locals => {:newsList => News.ProjectNews}%>
-    <h3><img src="/images/of/icon06.gif" align="left" valign="middle" />最新釋出</h3>
-    <ul>
-      <li>Create Animation Make a</li>
-      <li>TinyTux with Pho ... Make a</li>
-      <li>Buddy Make a porthole !</li>
-    </ul>
+    <%= render :partial => "releases/new_releases", :locals => {:newReleasesList => Release.new_releases}%>    
   </div>
 </div>
 <div id="Home">
