--- a/trunk/of/app/views/partials/_login.rhtml
+++ b/trunk/of/app/views/partials/_login.rhtml
@@ -2,11 +2,13 @@
 <% if(login?) -%>
   <%# = lightbox_link_to "Link Name", url_for(:controller => :images, :action => "image", :id => current_user.icon) %> 
   <%# = lightbox_image_tag(url_for(:controller => :images, :action => "image", :id => current_user.icon, :size => 24), url_for(:controller => :images, :action => "image", :id => current_user.icon), {:class=>"images"}, :title => "This is a test!") %>
+  <a href="<%= url_for(:controller => :user, :action => "home") %>">
   <img src="<%= url_for(:controller => :images,
                 :action => "image", :id => current_user.icon, :size => 24) %>" align="middle"/>
+  </a>
   <%= _("Welcome")%>!
   &nbsp;
-  <%=current_user.login%> 
+  <%= link_to current_user.login, :controller => :user, :action => :home %>
   &nbsp; 
   <%= link_to "[#{_("Logout")}]", { :action => :logout, :controller => :user} %>
 <% else -%>
