--- a/of/app/views/layouts/application.rhtml
+++ b/of/app/views/layouts/application.rhtml
@@ -5,7 +5,8 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%= _("OpenFoundry") %> -- <%= controller.action_name %></title>
-	<%= stylesheet_link_tag "scaffold", "openfoundry", "header", "transmenu" %>
+  <link rel="shortcut icon" href="http://www.openfoundry.org/images/favicon.ico" />
+  <%= stylesheet_link_tag "scaffold", "openfoundry", "header", "transmenu" %>
   <%= javascript_include_tag "prototype", "effects", "application", "transmenu" %>
   <%= javascript_include_tag 'calendar/calendar' %>
   <%= javascript_include_tag "calendar/lang/calendar-en.js" %>
