--- a/trunk/of/app/views/releases/_top_download_list.rhtml
+++ b/trunk/of/app/views/releases/_top_download_list.rhtml
@@ -13,7 +13,7 @@
 <% i=(@page-1)*10 %>
 <% for release in releases %>
   <tr>
-    <td><img src="<%= url_for(:controller => :images,:action => "image", :id => release.icon,:size => 16) %>"/></td>
+    <td><img src="<%= url_for(:controller => :images,:action => "image", :id => Project.find(release.project_id).icon,:size => 16) %>"/></td>
     <td><%= (i+=1).to_s %></td>
     <td><%= link_to "#{release.name}", "/projects/#{release.project_id}/releases/#{release.id}" %></td>
     <td><%= "#{release.created_at.strftime("%Y/%m/%d %H:%M")}"  %></td>
