--- a/trunk/of/app/views/news/list.rhtml
+++ b/trunk/of/app/views/news/list.rhtml
@@ -1,4 +1,4 @@
-<h1><%=@head1%></h1>
+<h1><%=@head%></h1>
 <div class="sort">
 <%= _("Sort by")%>
 <%= link_to _('Subject'),  sort_param('listing', News, 'subject', 'subject') %> |
@@ -8,21 +8,22 @@
   <%for news in @news %>
   <li>
     <%if news.catid == 0%>
-	  <%= link_to h(news.subject), {:controller => "news", :action => "show", :id => news.id}, :class => "news_subject" %> <%=news.updated_at.strftime("(%Y/%m/%d)")%>
+	  <%= link_to h(news.subject), {:controller => "news", :action => "show", :id => news.id}, :class => "news_subject" %>
     <%else%>
-      <%= link_to news.subject, news1_path(:id => news.id, :project_id => news.catid) %>
+      <%= link_to h(news.subject), news1_path(:id => news.id, :project_id => news.catid), :class => "news_subject" %>
     <%end%>
-    <p><%=h news.description[0..270].gsub(/<[^>]*>/,' ') %>...&nbsp;<%=link_to ("(詳全文)", :controller => "news", :action => "show", :id => news.id ) %></p>
+    <%=news.updated_at.strftime("(%Y/%m/%d)")%>
+    <p><%=h news.description[0..270].gsub(/<[^>]*>/,' ') %>...&nbsp;(<%=link_to (_('Read More'), :controller => "news", :action => "show", :id => news.id ) %>)</p>
     <% if permit?("site_admin") || (@project != nil && permit?("admin of :project")) -%>
     <p>
-      <label>狀態:</label>
+      <label><%=_('Status')%>:</label>
       <% if news.status == 1 %>
-                    開啟
+        <%=_('Enabled')%>
       <% else %>
-	               關閉
+	      <%=_('Disabled')%>
       <% end %>
-      <%= link_to '編輯', :action => 'edit', :id => news %>
-      <%= link_to '刪除', { :action => 'destroy', :id => news }, :confirm => '確定要刪除嗎?', :method => :delete %>
+      <%= link_to _('Edit'), :action => 'edit', :id => news %>
+      <%= link_to _('Delete'), { :action => 'destroy', :id => news }, :confirm => _('todo確定要刪除嗎?'), :method => :delete %>
     </p>
     <% end %>
   </li>
@@ -33,5 +34,5 @@
 
 <br />
 <% if permit?("site_admin") || (@project != nil && permit?("admin of :project")) -%>
-<%= link_to '新增新聞', :action => 'new' %>
+<%= link_to _('Add News'), :action => 'new' %>
 <% end %>
