--- a/of/app/views/releases/_top_download_list.rhtml
+++ b/of/app/views/releases/_top_download_list.rhtml
@@ -15,9 +15,9 @@
   <tr>
     <td><img src="<%= url_for(:controller => :images,:action => "image", :id => Project.find(release.project_id).icon,:size => 16) %>"/></td>
     <td><%= (i+=1).to_s %></td>
-    <td><%= link_to "#{release.name}", "/projects/#{release.project_id}/releases/#{release.id}" %></td>
-    <td><%= "#{release.created_at.strftime("%Y/%m/%d %H:%M")}"  %></td>
-    <td><%= "#{release.release_counter}"  %></td>
+    <td><%= link_to h(release.name), "/projects/#{release.project_id}/releases/#{release.id}" %></td>
+    <td><%= release.created_at.strftime("%Y/%m/%d %H:%M") %></td>
+    <td><%= release.release_counter %></td>
   </tr>
 <% end %>
 </table>
